--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Login</title>
-    <link href="/css/login.css" rel="stylesheet" type="text/css" />
+    <link href="css/login.css" rel="stylesheet" type="text/css" />
   </head>
-  <body onLoad="loading()">
+  <body>
     <div class="boxes">
       <div class="box" style="--i:0"></div>
       <div class="box" style="--i:1"></div>
